--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.2",
     "axios-retry": "^3.3.1",
+    "chart.js": "^3.6.0",
+    "fusioncharts": "^3.19.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
